# mp1

gem_simulator/gem_gazebo/worlds/: smaller_track_with_starting_point_new.world
mp0/: dubin_scenario.py  utils.py
mp1/scripts/: eval.py  simple_train.py
mp1/src/models/: simple_enet.py
src/mp1/: performance_report.md
src/mp1/data/: bev_config.json
src/mp1/scripts/: demo_train.py  generate_metrics.py  preview_bev.py  run_bev_config.py  run_lane_detection.py  test_detection.py
src/mp1/src/models/: simple_enet.py
src/mp2/: CMakeLists.txt  package.xml  plot_acceleration.py  plot_trajectory.py
src/mp2/config/: mp2_real.rviz
src/mp2/launch/: mp2.launch.py  mp2_simple.launch
src/mp2/results/mp2_data/: acceleration_data.csv  trajectory_data.csv
src/mp2/results/mp2_data 66s/: Problem5,7  acceleration_data.csv  trajectory_data.csv
src/mp2/src/: controller.py
src/mp2/src/log/: latest_build
